//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.credentials.keys;

import "google/protobuf/any.proto";

import "signed.proto";

//
// The type/use of a public key.
//
enum KeyType {
  UNKNOWN     = 0;
  IDENTITY    = 1;
  DEVICE      = 2;
  PARTY       = 3;
  FEED        = 4;
}

// TODO(burdon): Clashes with Typescript def. Such basic types should be defined in dxos/crypt if required.
// TODO(burdon): Dubious value (vs. overhead) to have sub message for this. Just prefix field name with pub/pri.
message PublicKey {
  bytes data = 1;
}

// TODO(burdon): Clashes with Typescript message SecretKey def.
message PrivateKey {
  bytes data = 1;
}

message KeyRecord {
  // The `KeyType` type of the key. This is often unknown for keys from other sources.
  required KeyType type = 1;

  // The public key (required).
  required PublicKey publicKey = 2;

  // The secret key (this will never be visible outside the Keyring).
  PrivateKey secretKey = 3;

  // Is this key from a Greeting "hint"?
  bool hint = 4;

  // Is this our key? Usually true if `secretKey` is present, may be false for "inception keys" such as the Party key.
  bool own = 5;

  // Is this key to be trusted?
  bool trusted = 6;

  // An RFC-3339 date/time string for when the key was added to the Keyring.
  string added = 7;

  // An RFC-3339 date/time string for when the key was created.
  string created = 8;
}

// TODO(burdon): Not a useful message type?
message KeyRecordList {
  repeated KeyRecord keys = 1;
}

//
// A key which includes its parent keys and SignedMessages leading back to the root of its authority.
// For example, if IdentityA signed for DeviceA, which signed for DeviceB, which signed for DeviceC the chain
// would comprised: DeviceC->DeviceB->DeviceA->IdentityA moving from tip to root.
//
message KeyChain {
  required PublicKey publicKey = 1;
  required SignedMessage message = 2;
  repeated KeyChain parents = 3;
}
